second commit to contact.html

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <title>cotact</title>
   </head>
   <body>
-  this is a commit file  
+  this is a commit file
+  added second line
   </body>
 </html>
